# real-time-object-detection

./: Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml  pyproject.toml
models/: ESNet_x0_75_pretrained_mmdet_format.pth
notebooks/: experiment_picodet.ipynb  picodet_from_scratch.ipynb  test_capture_youtube_stream.ipynb
src/: csppan.py  esnet.py  picodet_head.py
src/models/: __init__.py
src/models/backbones/: __init__.py  shufflenetv2.py
src/models/dense_heads/: __init__.py  nanodet_head.py  picodet_head.py
src/models/detectors/: __init__.py  nanodet.py  picodet.py
src/models/necks/: __init__.py  csp_pan.py  nanodet_pafpn.py
src/models/utils/: __init__.py  inverted_residual.py
